# the-zipper

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: lib.rs
