[package]
name = "the-zipper"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Denys Bushuliak<bushuliak@proton.me>"]
description = "A zipper is a data structure that allows you to traverse and modify a tree-like structure efficiently. It provides a way to navigate through the tree while keeping track of the context, enabling functional programming techniques."
keywords = ["zipper", "data-structures", "tree", "cursor", "immutable"]
categories = ["data-structures", "algorithms"]
exclude = ["target/", "benches/", "Makefile"]

[dev-dependencies]
cargo-llvm-cov = "0.6.16"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
